# opengl_project

./: CMakeLists.txt  README.md
include/KHR/: glad.c
include/glad/: glad.h
shaders/: obj.fs
shaders/lightning/: obj.fs  obj.vs
src/: main.cpp  shader.hpp  texture.hpp
src/Camera/: camera.cpp  camera.hpp
src/Engine/: engine.hpp  main.cpp
src/Model/: mesh.hpp  model.hpp  shader.hpp  texture.hpp
src/ligtning/: main.cpp
